--- a/index.html
+++ b/index.html
@@ -380,7 +380,10 @@ body {
  	.canvasStyle
 	{
    /*     border: 0px #CCC solid;*/
-	position:fixed;
+	position: absolute; 
+     width: 100%; 
+     height: 100%; 
+     overflow: hidden;
     }
 	.btncss
 	{
