--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ function signPhoto()
         
 		if (brightness<25)
 		{
-		ctx.strokeStyle = '#ffffff';
+		ctx.strokeStyle = 'red';
 
 		}
 		else
