--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@ function signPhoto()
 		else
 		{
         r=0; g=0; b=0; a=255;
-     	ctx.strokeStyle = "rgba("+r+","+g+","+b+","+(a/255)+")";
+     //	ctx.strokeStyle = "rgba("+r+","+g+","+b+","+(a/255)+")";
+     ctx.strokeStyle = 'red';
         }
        
         
