--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     	<script type="text/javascript" charset="utf-8" src="Canvas2ImagePlugin.js"></script>
 	<link href="styles.css" rel="stylesheet" type="text/css" />
-
 <script type="text/javascript" src="css-pop.js"></script>
 
 
@@ -427,6 +426,10 @@ body {
 
 </table>
   </div>
+  
+ <div id="popUpDiv" style="display:none"><a href="#" onclick="popup('popUpDiv')" >Close</a></div>
+	<div id="blanket" style="display:none"></div>
+
 
 <div id="sketchpadapp">
         <canvas id="theCanvas" class="canvasStyle"></canvas>
