--- a/index.html
+++ b/index.html
@@ -437,8 +437,8 @@ body {
 </table>
   </div>
   
-<div id="colorPa" style="colorPa"><label for="color1">Select a Color</label>
-<input id="color1" name="color1"  type="text" value="#333399" /></div>
+<div id="colorPa" style="colorPa">Select a Color
+<input id="color1" type="text" value="#000000" /></div>
 
 
 <div id="sketchpadapp">
