--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
   <script>
   
-  $('#color1').colorPicker();
+  function($) {
+    $('#color1').colorPicker();
+  });
   
   
     	var imgDataUrl;
