--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ body {
 </table>
   </div>
   
-<div id="colorPa" style="colorPa">Select a Color
+<div id="colorPa" class="colorPa">Select a Color
 <input id="color1" type="text" value="#000000" /></div>
 
 
