--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   
   jQuery(document).ready(function($) {
     $('#color1').colorPicker();
+    var colrSel = $('#color1').val(); 
   });
   
   
@@ -25,7 +26,7 @@
 	var start = function() {
       
     }
-    var colrSel;
+   // var colrSel;
     var paused=false;
     var canvas,ctx;
     var mouseX,mouseY,mouseDown=0;
