--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ function signPhoto()
    
      document.getElementById("colorPa").style.display="block";
      document.getElementById("colorPa").style.visibility="visible";
-     colrSel=trim(document.getElementById('color2').value);
+     colrSel=document.getElementById('color2').value;
   alert(colrSel);
     canvas = document.getElementById('theCanvas');
         
