--- a/index.html
+++ b/index.html
@@ -396,6 +396,8 @@ body {
 	{
 		visibility:hidden;
 		display:none;
+		border: 0px solid white;
+    		box-sizing: border-box;
 	}
 	
 	.sketchpadapp {
