--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ body {
 </table>
   </div>
   
-<div id="colorPa" class="colorPa"><input type="hidden" size="8" id="color2"/>Select a Color<input id="color1" size="8" type="text" value="#000000" /></div>
+<div id="colorPa" class="colorPa"><input type="hidden" size="8" id="color2"/>Select Signature Color<input id="color1" size="8" type="text" value="#000000" /></div>
 <BR>
 
 <div id="sketchpadapp">
