--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ function signPhoto()
      //	ctx.strokeStyle = "rgba("+r+","+g+","+b+","+(a/255)+")";
      //ctx.strokeStyle = 'red';
        // }
-       ctx.strokeStyle=document.getElementById('color2').value;
+       ctx.strokeStyle=document.getElementById('sss').value;
        //document.getElementById('color2').value;
         
         ctx.lineCap = "round";
@@ -436,6 +436,11 @@ body {
 	cursor:pinter;
 	font: 8pt arial;
 	}
+	.palette {
+        float: left;
+        height: 3px;
+        width: 15px;
+    }
 	
   </style>
   </head>
