--- a/index.html
+++ b/index.html
@@ -453,8 +453,8 @@ body {
 		<tr><td align="center">	<font face=system size=3>DigiGraph</font></td>
 	<!--<td align="right"><img src="home.png" onclick="gotoHomePage();"></td>-->
 	</tr>
-	<tr><td><input type="hidden" id="sss"></td></tr></table></div>
-
+	<tr><td>&nbsp;</tr></table></div>
+<BR><br>
   <div style="overflow:auto;">
 <table cellspacing="0" cellpadding="0" width="100%" style="margin: 0px;">
 <tr height="1%" bgcolor="#fbd5b5">
@@ -468,7 +468,8 @@ body {
 
 </table>
   </div>
-    <div id='palette-div' style='visibility:hidden;border:2px solid black; float:left;'>&nbsp;</div>
+  <input type="hidden" id="sss">
+    <div id='palette-div' style='border:2px solid white; float:left;'>&nbsp;</div>
   
 
 <div id="sketchpadapp">
