--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ body {
 </table>
   </div>
   <input type="hidden" id="sss">
-    <div id='palette-div' style='border:2px solid white; float:left;'>&nbsp;</div>
+    <div id='palette-div' style='border:2px solid #cc9d55; float:left;'>&nbsp;</div>
   
 
 <div id="sketchpadapp">
