--- a/index.html
+++ b/index.html
@@ -437,8 +437,8 @@ body {
 	font: 8pt arial;
 	}
 	.palette {
-       
-        height: 3px;
+        float: left;
+        height: 5px;
         width: 15px;
     }
 	
@@ -468,8 +468,9 @@ body {
 
 </table>
   </div>
-  <input type="hidden" id="sss">
-    <div id='palette-div' style='border:2px solid #cc9d55; float:left;'>&nbsp;</div>
+ 
+    <div id='palette-div' style='width:60%;border:2px solid #fbd5b5; float:left;'>&nbsp;</div>
+     <input type="hidden" id="sss">
   
 
 <div id="sketchpadapp">
