--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@ body {
 </table>
   </div>
  
-    <div id='palette-div' style='width:60%;border:2px solid #fbd5b5; float:left;'>&nbsp;</div>
+    <div id='palette-div' style='border:2px solid black; float:left;'>&nbsp;</div>
      <input type="hidden" id="sss">
-  
+  <BR>
 
 <div id="sketchpadapp">
         <canvas id="theCanvas" class="canvasStyle"></canvas>
