--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ body {
 	}
 	.palette {
         float: left;
-        height: 5px;
+        height: 15px;
         width: 15px;
     }
 	
@@ -469,7 +469,7 @@ body {
 </table>
   </div>
  
-    <div id='palette-div' style='border:2px solid black; float:left;'>&nbsp;</div>
+    <div id='palette-div' style='border:0px solid fbd5b5; float:right;'>&nbsp;</div>
      <input type="hidden" id="sss">
   <BR>
 
