--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function onConfirmExit(button) {
 function drawImageScaled_1(img, ctx) {
    var canvas = ctx.canvas ;
  canvas.width = window.innerWidth;
- canvas.height = window.innerHeight-40;
+ canvas.height = window.innerHeight-60;
 
 var hRatio = canvas.width  / img.width    ;
    var vRatio =  canvas.height / img.height  ;
@@ -99,7 +99,7 @@ var colorSum = 0;
   function drawImageScaled(img, ctx) {
    var canvas = ctx.canvas ;
   canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight-40;
+  canvas.height = window.innerHeight-60;
    	ctx.clearRect(0,0,canvas.width, canvas.height);
     ctx.drawImage(img, 0,0,img.width,img.height);
    tmp = ctx.getImageData(0,0,img.width,img.height);
@@ -423,7 +423,7 @@ body {
 	}
  	.canvasStyle
 	{
-   /*     border: 0px #CCC solid;*/
+        border: 2px black solid;
 	position: absolute; 
      width: 100%; 
      height: 100%; 
