--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@ body {
 	}
 	.palette {
         float: left;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
     }
 	
   </style>
@@ -471,7 +471,7 @@ body {
 </table>
   </div>
  
-    <div id='palette-div' style='border:2px solid fbd5b5; float:right;'>&nbsp;</div>
+    <div id='palette-div' style='border:2px solid fbd5b5; float:left;'>&nbsp;</div>
      <input type="hidden" id="sss">
   <BR>
 
