--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ body {
 </table>
   </div>
  
-    <div id='palette-div' style='border:2px solid fbd5b5; float:left;'>&nbsp;</div>
+    <div id='palette-div' style='border:2px solid fbd5b5; float:right;'>&nbsp;</div>
      <input type="hidden" id="sss">
   <BR>
 
