--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       
     }
    // var colrSel;
+   var show_color = false;
     var paused=false;
     var canvas,ctx;
     var mouseX,mouseY,mouseDown=0;
@@ -165,8 +166,10 @@ document.body.style.backgroundImage='none';
     function show()
 
 {
+      if (show_color==false)
+      {
       var colors = ["#7FFF00", "#8B008B", "#E9967A", "#FFFFFF","#00BFFF", "#DAA520", "#CD5C5C"];
-
+           show_color=true;
     var palette = "";
 
   for(var i = 0; i < colors.length; i++) {
@@ -184,7 +187,7 @@ document.body.style.backgroundImage='none';
             var currentColor = clickedDiv.style.backgroundColor;
 
             document.getElementById('sss').value = currentColor;
-
+	}
     
     }
 
@@ -439,7 +442,6 @@ body {
 	font: 8pt arial;
 	}
 	.palette {
-        float: left;
         height: 40px;
         width: 40px;
     }
@@ -471,9 +473,9 @@ body {
 </table>
   </div>
  
-    <div id='palette-div' style='border:2px solid fbd5b5; float:right;'>&nbsp;</div>
+    <div id='palette-div' style='border:2px solid fbd5b5; '>&nbsp;</div>
      <input type="hidden" id="sss">
-  <BR>
+  <BR><BR>
 
 <div id="sketchpadapp">
         <canvas id="theCanvas" class="canvasStyle"></canvas>
