--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ body {
 </table>
   </div>
  
-    <div id='palette-div' style='border:2px solid fbd5b5; '>&nbsp;</div>
+    <div id='palette-div' style='border:2px solid fbd5b5; float:right;'>&nbsp;</div>
      <input type="hidden" id="sss">
   <BR><BR>
 
