--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@ var colorSum = 0;
   }
   function drawImageScaled(img, ctx) {
    var canvas = ctx.canvas ;
- // canvas.width = window.innerWidth;
- // canvas.height = window.innerHeight-60;
+ canvas.width = window.innerWidth;
+ canvas.height = window.innerHeight-30;
    	ctx.clearRect(0,0,canvas.width, canvas.height);
-    ctx.drawImage(img, 0,0,canvas.width,canvas.height);
-   tmp = ctx.getImageData(0,0,canvas.width,canvas.height);
+    ctx.drawImage(img, 0,0,img.width,img.height);
+   tmp = ctx.getImageData(0,0,img.width,img.height);
   }
 
 
