--- a/index.html
+++ b/index.html
@@ -101,9 +101,15 @@ var colorSum = 0;
    var canvas = ctx.canvas ;
  canvas.width = window.innerWidth;
  canvas.height = window.innerHeight-30;
+ var srcWidth=img.width;
+ var srcHeight=img.height;
+ var ratio = Math.min(canvas.width  / srcWidth,  canvas.height/ srcHeight);
+   var i_width=srcWidth*ratio;
+   var i_height=srcHeight*ratio;
+   
    	ctx.clearRect(0,0,canvas.width, canvas.height);
-    ctx.drawImage(img, 0,0,img.width,img.height);
-   tmp = ctx.getImageData(0,0,img.width,img.height);
+    ctx.drawImage(img, 0,0,i_width,i_height);
+   tmp = ctx.getImageData(0,0,i_width,i_height);
   }
 
 
