--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@ body {
 	{
        /* border: 2px black solid;*/
 	position: absolute; 
-     width: 100%; 
-     height: 100%; 
+     width: 300px; 
+     height: 300px; 
      overflow: hidden;
     }
 	.btncss
