--- a/index.html
+++ b/index.html
@@ -62,11 +62,22 @@ function onConfirmExit(button) {
  		 img.onload= drawImageScaled_1.bind(null, img, ctx);
 		 img.src = "data:image/jpeg;base64," + imageData;
   }
+function RememberOriginalSize(img) {
+
+            if (!img.originalsize) {
+                img.originalsize = {width : img.width, height : img.height};
+            }
+
+        }
+
 function drawImageScaled_1(img, ctx) {
    var canvas = ctx.canvas ;
  canvas.width = window.innerWidth;
  canvas.height = window.innerHeight-50;
- 
+  RememberOriginalSize(img);
+var srcwidth = img.originalsize.width;
+            var srcheight = img.originalsize.height;
+
  var wrh = img.width / img.height;
             var newWidth = canvas.width;
             var newHeight = newWidth / wrh;
@@ -79,7 +90,8 @@ var srcWidth=img.width;
  var ratio = Math.min(canvas.width  / srcWidth,  canvas.height/ srcHeight);
    var i_width=srcWidth*ratio;
    var i_height=srcHeight*ratio;
-  var result = ScaleImage(img.width,img.height,canvas.width,canvas.height,true); 
+   
+  var result = ScaleImage(srcwidth,srcheight,canvas.width,canvas.height,true); 
    	ctx.clearRect(0,0,canvas.width, canvas.height);
    ctx.drawImage(img, result.targetleft, result.targettop, result.width, result.height);
    tmp = ctx.getImageData(0,0,result.width, result.height);
