--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@ body {
 	{
        /* border: 2px black solid;*/
 	position: absolute; 
-     width: 320px; 
-     height: 180px; 
+     width: 100%; 
+     height: 100%; 
      overflow: hidden;
     }
 	.btncss
