--- a/index.html
+++ b/index.html
@@ -140,7 +140,21 @@ var srcWidth=img.width;
     return result;
 }
 
-  function drawImageScaled(img, ctx) {
+function drawImageScaled(img, ctx) {
+   var canvas = ctx.canvas ;
+ canvas.width = window.innerWidth;
+ canvas.height = window.innerHeight-50;
+RememberOriginalSize(img);
+var srcwidth = img.originalsize.width;
+ var srcheight = img.originalsize.height;
+ var result = ScaleImage(srcwidth,srcheight,canvas.width,canvas.height,true); 
+   	ctx.clearRect(0,0,canvas.width, canvas.height);
+   ctx.drawImage(img, result.targetleft, result.targettop, result.width, result.height);
+   tmp = ctx.getImageData(0,0,result.width, result.height);
+ 
+  }
+  
+  function drawImageScaled_old(img, ctx) {
    var canvas = ctx.canvas ;
  canvas.width = window.innerWidth;
  canvas.height = window.innerHeight-50;
