--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ function drawImageScaled_1(img, ctx) {
 var srcwidth = img.originalsize.width;
             var srcheight = img.originalsize.height;
 
-  var result = ScaleImage(srcwidth,srcheight,canvas.width,canvas.height,false); 
+  var result = ScaleImage(srcwidth,srcheight,canvas.width,canvas.height,true); 
    	ctx.clearRect(0,0,canvas.width, canvas.height);
    ctx.drawImage(img, result.targetleft, result.targettop, result.width, result.height);
    tmp = ctx.getImageData(0,0,result.width, result.height);
@@ -135,7 +135,7 @@ function drawImageScaled(img, ctx) {
 RememberOriginalSize(img);
 var srcwidth = img.originalsize.width;
  var srcheight = img.originalsize.height;
- var result = ScaleImage(srcwidth,srcheight,canvas.width,canvas.height,false); 
+ var result = ScaleImage(srcwidth,srcheight,canvas.width,canvas.height,true); 
    	ctx.clearRect(0,0,canvas.width, canvas.height);
    ctx.drawImage(img, result.targetleft, result.targettop, result.width, result.height);
    tmp = ctx.getImageData(0,0,result.width, result.height);
