--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <title>DigiGraph</title>
 <!--	<meta name="viewport" content="width=device-width, initial-scale=1">-->
-	<meta name="viewport" id="viewport" content="width=device-width, height=device-height,
- initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
+	<meta name="viewport" id="viewport" content="width=device-width, height=device-height,initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
 <script type="text/javascript" src="paint.js"></script>
     	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     	<script type="text/javascript" charset="utf-8" src="Canvas2ImagePlugin.js"></script>
