--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ var hRatio = canvas.width  / img.width    ;
 
    //	ctx.clearRect(0,0,canvas.width, canvas.height);
   //  ctx.drawImage(img, 0,0,img.width,img.height);
-   tmp = ctx.getImageData(0,0,canvas.width, canvas.height);
+   tmp = ctx.getImageData(0,0,img.width, img.height);
 
 var colorSum = 0;
  var data1 =tmp.data;
