--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@ function RememberOriginalSize(img) {
 function drawImageScaled_1(img, ctx) {
    		var canvas = ctx.canvas ;
  		canvas.width = window.innerWidth;
- 		canvas.height = window.innerHeight-50;
+ 		canvas.height = window.innerHeight;
   		RememberOriginalSize(img);
 		var srcwidth = img.originalsize.width;
             	var srcheight = img.originalsize.height;
   		var result = ScaleImage(srcwidth,srcheight,canvas.width,canvas.height,true); 
    		ctx.clearRect(0,0,canvas.width, canvas.height);
    		ctx.drawImage(img, result.targetleft, result.targettop, result.width, result.height);
-   		tmp = ctx.getImageData(0,0,srcwidth, srcheight);
+   		tmp = ctx.getImageData(0,0,canvas.width, canvas.height);
     
   }
 function ScaleImage(srcwidth, srcheight, targetwidth, targetheight, fLetterBox) {
@@ -169,7 +169,7 @@ var colorSum = 0;
   function drawImageScaled(img, ctx) {
    var canvas = ctx.canvas ;
   canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight-40;
+  canvas.height = window.innerHeight;
    	ctx.clearRect(0,0,canvas.width, canvas.height);
     ctx.drawImage(img, 0,0,img.width,img.height);
    tmp = ctx.getImageData(0,0,img.width,img.height);
