--- a/index.html
+++ b/index.html
@@ -386,11 +386,11 @@ var imageObj = new Image();
     imageObj.src = imgDataUrl;
 window.plugins.socialsharing.share('DG','Share',imageObj.src,null);
  
-setTimeout(function(){ navigator.notification.alert('Image Shared Successfully...',  alertDismissed,   'DigiGraph',   'OK'); },8000);
+//setTimeout(function(){ navigator.notification.alert('Image Shared Successfully...',  alertDismissed,   'DigiGraph',   'OK'); },8000);
 }
 else
 {
-	alert("Canvas empty.. Please load a image....")
+	alert("Please load a image....")
 }
 }
 function onConfirm(buttonIndex) {
