--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ else
 }
 function onSuccess()
 {
-setTimeout(function(){ navigator.notification.alert('Image Shared Successfully...',  alertDismissed,   'DigiGraph',   'OK'); },1);	
+navigator.notification.alert('Image Shared Successfully...',  alertDismissed,   'DigiGraph',   'OK');	
 }
 function onError()
 {
