--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@ ctx = canvas.getContext('2d');
 imgDataUrl = canvas.toDataURL();
 var imageObj = new Image();
     imageObj.src = imgDataUrl;
-window.plugins.socialsharing.share('DG','Share',imageObj.src,alert('Share OK'), function(errormsg){alert("Share Failed...")}) // error callback);
- 
+//window.plugins.socialsharing.share('DG','Share',imageObj.src,alert('Share OK'), function(errormsg){alert("Share Failed...")}) // error callback);
+ window.plugins.socialsharing.share('DG','DigiGraph',imageObj.src,null);
 //setTimeout(function(){ navigator.notification.alert('Image Shared Successfully...',  alertDismissed,   'DigiGraph',   'OK'); },8000);
 }
 else
