--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ function doOnOrientationChange()
       if (screen.height > screen.width) {
          window.orientation='portrait';
       } else {
-         window.orientation='landscape';
+         window.orientation='portrait';
       }
 }
 
