--- a/main.html
+++ b/main.html
@@ -501,8 +501,8 @@ body {
 	.palette {
 	float: left;
 	border-radius: 50%;
-        height: 40px;
-        width: 40px;
+        height: 30px;
+        width: 30px;
     }
 	
   </style>
@@ -532,7 +532,7 @@ body {
 <td><button onclick="clearCanvas();" class="btncss" ><img src="5.png" width="55px" height="55px"></FONT></td>
 <td><button onclick="showConfirm();" class="btncss" ><img src="6.png" width="55px" height="55px"></FONT></td></tr>
 <tr><td><font size=1 face="system">&nbsp;&nbsp;&nbsp;<B>Gallery</B></font></td><td><font size=1 face=system>&nbsp;&nbsp;&nbsp;<B>Camera</B></font></td><td><font size=1 face=system>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<B>Sign</B></font></td><td><font size=1 face=system>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<B>Save</B></font></td><td><font size=1 face=system>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<B>Clear</B></font></td><td><font size=1 face=system>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<B>Share</B></font></td></tr>
-
+<tr><td colspan=6>&nbsp;</td></tr>
 </table>
   </div>
   <div id='palette-div' style='border:2px solid fbd5b5; float:right;'>&nbsp;</div>
