--- a/main.html
+++ b/main.html
@@ -229,7 +229,7 @@ document.body.style.backgroundImage='none';
 {
       if (show_color==false)
       {
-      var colors = ["#7FFF00","#7FFF00", "#8B008B", "#E9967A", "#FFFFFF","#00BFFF", "#DAA520", "#CD5C5C"];
+      var colors = ["#000000","#7FFF00", "#8B008B", "#E9967A", "#FFFFFF","#00BFFF", "#DAA520", "#CD5C5C"];
            show_color=true;
     var palette = "";
   for(var i = 0; i < colors.length; i++) {
