--- a/main.html
+++ b/main.html
@@ -234,7 +234,7 @@ document.body.style.backgroundImage='none';
     var palette = "";
   for(var i = 0; i < colors.length; i++) {
                 palette = palette + " <div class='palette'" + " style='background-color:" + colors[i]
-                    + "' onClick='setBgColor(this)'> &nbsp; </div>";
+                    + "' onClick='setBgColor(this)'> &nbsp;&nbsp;&nbsp; </div>";
             }
 			document.getElementById('palette-div').style.borderColor = "black";
 			
